--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-firebase-hooks": "^2.2.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.0.6",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-spinners": "^0.9.0",
+    "react-text-loop": "^2.3.0",
     "recoil": "0.0.8",
     "shortid": "^2.2.15",
     "spotify-web-api-js": "^1.4.0",
-    "typescript": "~3.7.2"
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "serve": "firebase serve --only functions",
