Lots of changes oooo

--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/shortid": "0.0.29",
     "@types/spotify-web-playback-sdk": "^0.1.7",
+    "@types/testing-library__dom": "^7.5.0",
+    "colorthief": "^2.3.2",
     "emotion-theming": "^10.0.27",
     "firebase": "^7.15.1",
+    "formik": "^2.1.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-firebase-hooks": "^2.2.0",
